Updated html element tags

--- a/vaultbrewing_yelpscraping.ipynb
+++ b/vaultbrewing_yelpscraping.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#url for desired business\n",
+    "#url for desired business. Yelp updated the tags so they need to be updated if it isn't finding the text.\n",
     "url = 'https://www.yelp.com/biz/vault-brewing-yardley'\n",
     "response = requests.get(url)\n",
     "text = soup(response.text,'html.parser')"
@@ -45,27 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_reviews = 556"
+    "num_reviews = int(text.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa- text-size--large__373c0__3t60B\"}).text.strip(' reviews'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "567\n",
       "['https://www.yelp.com/biz/vault-brewing-yardley?start=0', 'https://www.yelp.com/biz/vault-brewing-yardley?start=20', 'https://www.yelp.com/biz/vault-brewing-yardley?start=40', 'https://www.yelp.com/biz/vault-brewing-yardley?start=60', 'https://www.yelp.com/biz/vault-brewing-yardley?start=80', 'https://www.yelp.com/biz/vault-brewing-yardley?start=100', 'https://www.yelp.com/biz/vault-brewing-yardley?start=120', 'https://www.yelp.com/biz/vault-brewing-yardley?start=140', 'https://www.yelp.com/biz/vault-brewing-yardley?start=160', 'https://www.yelp.com/biz/vault-brewing-yardley?start=180']\n"
      ]
     }
    ],
    "source": [
+    "print(num_reviews)\n",
     "url_list = []\n",
     "for i in range(0, num_reviews,20):\n",
     "    url_list.append(url+'?start='+str(i))\n",
@@ -74,16 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews = text.find_all('div',attrs = {'class':\"lemon--div__373c0__1mboc sidebarActionsHoverTarget__373c0__2kfhE arrange__373c0__UHqhV gutter-12__373c0__3kguh grid__373c0__29zUk layout-stack-small__373c0__3cHex border-color--default__373c0__2oFDT\"})"
+    "#part of webpage that highlights the entire review\n",
+    "reviews = text.find_all('div',attrs = {'class':\"lemon--div__373c0__1mboc review__373c0__13kpL sidebarActionsHoverTarget__373c0__2kfhE arrange__373c0__2C9bH gutter-2__373c0__1DiLQ grid__373c0__1Pz7f layout-stack-small__373c0__27wVp border-color--default__373c0__3-ifU\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,23 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "location = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f text-color--normal__373c0__K_MKN text-align--left__373c0__2pnx_ text-weight--bold__373c0__3HYJa text-size--small__373c0__3SGMi\"}).get_text().strip()"
+    "location = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa- text-weight--bold__373c0__1elNz text-size--small__373c0__3NVWO\"}).get_text().strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trenton, NJ\n"
+      "Philadelphia, PA\n"
      ]
     }
    ],
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0\n"
+      "3.0\n"
      ]
     }
    ],
@@ -164,43 +167,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/27/2019\n"
+      "6/21/2020\n"
      ]
     }
    ],
    "source": [
-    "date = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f text-color--mid__373c0__3G312 text-align--left__373c0__2pnx_\"}).get_text()\n",
+    "date = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa-\"}).get_text()\n",
     "print(date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = review.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2pB8f comment__373c0__3EKjH text-color--normal__373c0__K_MKN text-align--left__373c0__2pnx_\"}).text"
+    "content = review.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz comment__373c0__3EKjH text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa-\"}).text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"This restaurant/bar really reminds me of my old stomping grounds in Haddon Township NJ and especially a restaurant I used to frequent called Keg and Kitchen. This restaurant is located in an old bank building, hence the name. It definitely has an interesting interior, there is also outdoor seating and more traditional seating outside the vault area. I hear it gets pretty busy at prime bar hours, however we came here around 5 pm on a Thursday evening and there was ample seating available both indoors and out. I would think it's best to come here with a group of people as they had big platters for $17-$20 that could feed probably 4-5 people and the food looked really good. They also had a really nice selection of seasonal craft beers. We got the mushroom pizza and waffle grilled cheese. The crust of the mushroom pizza was soft on the inside and crispy on the outside, just right. Keg and Kitchen makes the same pizza, mushrooms, arugula, and truffle oil, but K&K's tastes a lot better for some reason. I couldn't really put my finger on it. I think it might be the truffle oil but I'm uncertain. The waffle grilled cheese was served with a quarter bowl of tomato dipping soup. It was really good. The only thing missing was the crispy toasted flavor. The food was good, but not amazing. Drinks and atmosphere were great. Four stars.\""
+       "\"Food is good, service subpar. We arrived and were told to wear a mask inside when going to the host stand. They weren't enforcing this, and most people weren't even wearing a mask. Whatever, but if you are going to have a rule, please enforce it. We were sat at our table, given one paper menu to share amongst the whole table of 6. Who knows if it was a new menu. It felt damp. Doesn't that defeat the purpose of a reusable menu? So everyone can have their own and toss it out after?Service was so slow, no water refills, waitress would leave before we could even ask for extra napkins and water.The duck and apple pizza was excellent. I did enjoy the pork belly fingerling fries as well. I enjoyed my blackberry drip beer, although I tasted none of the flavors noted.\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,41 +214,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "finished page 1 of 28\n",
-      "finished page 2 of 28\n",
-      "finished page 3 of 28\n",
-      "finished page 4 of 28\n",
-      "finished page 5 of 28\n",
-      "finished page 6 of 28\n",
-      "finished page 7 of 28\n",
-      "finished page 8 of 28\n",
-      "finished page 9 of 28\n",
-      "finished page 10 of 28\n",
-      "finished page 11 of 28\n",
-      "finished page 12 of 28\n",
-      "finished page 13 of 28\n",
-      "finished page 14 of 28\n",
-      "finished page 15 of 28\n",
-      "finished page 16 of 28\n",
-      "finished page 17 of 28\n",
-      "finished page 18 of 28\n",
-      "finished page 19 of 28\n",
-      "finished page 20 of 28\n",
-      "finished page 21 of 28\n",
-      "finished page 22 of 28\n",
-      "finished page 23 of 28\n",
-      "finished page 24 of 28\n",
-      "finished page 25 of 28\n",
-      "finished page 26 of 28\n",
-      "finished page 27 of 28\n",
-      "finished page 28 of 28\n"
+      "finished page 1 of 29\n",
+      "finished page 2 of 29\n",
+      "finished page 3 of 29\n",
+      "finished page 4 of 29\n",
+      "finished page 5 of 29\n",
+      "finished page 6 of 29\n",
+      "finished page 7 of 29\n",
+      "finished page 8 of 29\n",
+      "finished page 9 of 29\n",
+      "finished page 10 of 29\n",
+      "finished page 11 of 29\n",
+      "finished page 12 of 29\n",
+      "finished page 13 of 29\n",
+      "finished page 14 of 29\n",
+      "finished page 15 of 29\n",
+      "finished page 16 of 29\n",
+      "finished page 17 of 29\n",
+      "finished page 18 of 29\n",
+      "finished page 19 of 29\n",
+      "finished page 20 of 29\n",
+      "finished page 21 of 29\n",
+      "finished page 22 of 29\n",
+      "finished page 23 of 29\n",
+      "finished page 24 of 29\n",
+      "finished page 25 of 29\n",
+      "finished page 26 of 29\n",
+      "finished page 27 of 29\n",
+      "finished page 28 of 29\n",
+      "finished page 29 of 29\n"
      ]
     }
    ],
@@ -258,11 +262,11 @@
     "    for review in reviews:\n",
     "        dic = {}\n",
     "        #Code copied from previous steps\n",
-    "        username = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f fs-block text-color--inherit__373c0__w_15m text-align--left__373c0__2pnx_ text-weight--bold__373c0__3HYJa\"}).string\n",
-    "        location = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f text-color--normal__373c0__K_MKN text-align--left__373c0__2pnx_ text-weight--bold__373c0__3HYJa text-size--small__373c0__3SGMi\"}).get_text().strip()\n",
-    "        date = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f text-color--mid__373c0__3G312 text-align--left__373c0__2pnx_\"}).get_text()\n",
+    "        #username = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f fs-block text-color--inherit__373c0__w_15m text-align--left__373c0__2pnx_ text-weight--bold__373c0__3HYJa\"}).string\n",
+    "        location = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa- text-weight--bold__373c0__1elNz text-size--small__373c0__3NVWO\"}).get_text().strip()  \n",
+    "        date = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa-\"}).get_text()\n",
     "        rating = float(review.select('[aria-label*=rating]')[0]['aria-label'].strip(' star rating'))\n",
-    "        content = review.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2pB8f comment__373c0__3EKjH text-color--normal__373c0__K_MKN text-align--left__373c0__2pnx_\"}).text\n",
+    "        content = review.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz comment__373c0__3EKjH text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa-\"}).text\n",
     "        #Assign Values to the dictionary\n",
     "        #dic['username']=username Commented out to protect yelp user privacy\n",
     "        dic['location']=location\n",
@@ -275,7 +279,7 @@
     "    for index, url in enumerate(url_list):\n",
     "        response = requests.get(url).text\n",
     "        s = soup(response, 'html.parser')\n",
-    "        reviews = s.find_all('div',attrs = {'class':\"lemon--div__373c0__1mboc sidebarActionsHoverTarget__373c0__2kfhE arrange__373c0__UHqhV gutter-12__373c0__3kguh grid__373c0__29zUk layout-stack-small__373c0__3cHex border-color--default__373c0__2oFDT\"})\n",
+    "        reviews = s.find_all('div',attrs = {'class':\"lemon--div__373c0__1mboc review__373c0__13kpL sidebarActionsHoverTarget__373c0__2kfhE arrange__373c0__2C9bH gutter-2__373c0__1DiLQ grid__373c0__1Pz7f layout-stack-small__373c0__27wVp border-color--default__373c0__3-ifU\"})        \n",
     "        scrape_single_page(reviews, review_writer)\n",
     "        #Random sleep to avoid getting banned from the server\n",
     "        time.sleep(random.randint(1,5))\n",
