--- a/vaultbrewing_yelpscraping.ipynb
+++ b/vaultbrewing_yelpscraping.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +274,10 @@
     "        dic['rating'] = rating\n",
     "        dic['content']=content\n",
     "        review_writer.writerow(dic.values())\n",
+    "header = ['Location','Date','Rating','Content']\n",
     "with open('vaultbrewing.csv','w',encoding = 'utf-8') as csvfile:\n",
     "    review_writer = csv.writer(csvfile)\n",
+    "    review_writer.writerow(header)\n",
     "    for index, url in enumerate(url_list):\n",
     "        response = requests.get(url).text\n",
     "        s = soup(response, 'html.parser')\n",
