--- a/vaultbrewing_analysis.ipynb
+++ b/vaultbrewing_analysis.ipynb
@@ -26,8 +26,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>User_Location</th>\n",
-       "      <th>Review_Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Date</th>\n",
        "      <th>Rating</th>\n",
        "      <th>Content</th>\n",
        "    </tr>\n",
@@ -35,57 +35,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>PA, PA</td>\n",
-       "      <td>1/24/2020</td>\n",
+       "      <td>Gloucester City, NJ</td>\n",
+       "      <td>4/3/2020</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>After moving to Bucks County, I'd say we've de...</td>\n",
+       "      <td>Ordered from here during the pandemic, great f...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Warrington, PA</td>\n",
-       "      <td>2/23/2020</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Recently visited Vault Brewing as my dad and I...</td>\n",
+       "      <td>Mount Laurel, NJ</td>\n",
+       "      <td>5/15/2020</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Such a great place! I came here about 2 months...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Philadelphia, PA</td>\n",
+       "      <td>6/21/2020</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Food is good, service subpar. We arrived and w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Yardley, PA</td>\n",
+       "      <td>3/17/2020</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Love this brewery There are no TV's which is g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>trenton, NJ</td>\n",
        "      <td>10/27/2019</td>\n",
        "      <td>4.0</td>\n",
        "      <td>This restaurant/bar really reminds me of my ol...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ewing Township, NJ</td>\n",
-       "      <td>3/2/2020</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>The service at Vault can be a little lacking b...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pigeon Forge, TN</td>\n",
-       "      <td>3/1/2020</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Great venue for drinks. Food is delicious and ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        User_Location Review_Date  Rating  \\\n",
-       "0              PA, PA   1/24/2020     5.0   \n",
-       "1      Warrington, PA   2/23/2020     4.0   \n",
-       "2         trenton, NJ  10/27/2019     4.0   \n",
-       "3  Ewing Township, NJ    3/2/2020     4.0   \n",
-       "4    Pigeon Forge, TN    3/1/2020     4.0   \n",
+       "              Location        Date  Rating  \\\n",
+       "0  Gloucester City, NJ    4/3/2020     5.0   \n",
+       "1     Mount Laurel, NJ   5/15/2020     5.0   \n",
+       "2     Philadelphia, PA   6/21/2020     3.0   \n",
+       "3          Yardley, PA   3/17/2020     5.0   \n",
+       "4          trenton, NJ  10/27/2019     4.0   \n",
        "\n",
        "                                             Content  \n",
-       "0  After moving to Bucks County, I'd say we've de...  \n",
-       "1  Recently visited Vault Brewing as my dad and I...  \n",
-       "2  This restaurant/bar really reminds me of my ol...  \n",
-       "3  The service at Vault can be a little lacking b...  \n",
-       "4  Great venue for drinks. Food is delicious and ...  "
+       "0  Ordered from here during the pandemic, great f...  \n",
+       "1  Such a great place! I came here about 2 months...  \n",
+       "2  Food is good, service subpar. We arrived and w...  \n",
+       "3  Love this brewery There are no TV's which is g...  \n",
+       "4  This restaurant/bar really reminds me of my ol...  "
       ]
      },
      "execution_count": 1,
@@ -95,7 +95,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "vault = pd.read_csv('vaultbrewing.csv', names = ['User_Location','Review_Date','Rating','Content'])\n",
+    "vault = pd.read_csv('vaultbrewing.csv')\n",
     "vault.fillna(0)\n",
     "vault.head()"
    ]
