Comments added to code to improve understanding. Also added try/exception handling for location since some users do not provide it on their Yelp profile

--- a/vaultbrewing_yelpscraping.ipynb
+++ b/vaultbrewing_yelpscraping.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries needed to complete web scraping\n",
     "from bs4 import BeautifulSoup as soup\n",
     "import requests\n",
     "import re"
@@ -20,7 +21,7 @@
     "#url for desired business. Yelp updated the tags so they need to be updated if it isn't finding the text.\n",
     "url = 'https://www.yelp.com/biz/vault-brewing-yardley'\n",
     "response = requests.get(url)\n",
-    "text = soup(response.text,'html.parser')"
+    "s = soup(response.text,'html.parser')"
    ]
   },
   {
@@ -45,65 +46,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_reviews = int(text.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa- text-size--large__373c0__3t60B\"}).text.strip(' reviews'))"
+    "num_reviews = int(s.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa- text-size--large__373c0__3t60B\"}).text.strip(' reviews'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "568 reviews posted about this restaurant\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(num_reviews)+' reviews posted about this restaurant')\n",
+    "url_list = []\n",
+    "#creating list of all the urls to call in order to scrape reviews on different pages\n",
+    "for i in range(0, num_reviews,20):\n",
+    "    url_list.append(url+'?start='+str(i))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "567\n",
-      "['https://www.yelp.com/biz/vault-brewing-yardley?start=0', 'https://www.yelp.com/biz/vault-brewing-yardley?start=20', 'https://www.yelp.com/biz/vault-brewing-yardley?start=40', 'https://www.yelp.com/biz/vault-brewing-yardley?start=60', 'https://www.yelp.com/biz/vault-brewing-yardley?start=80', 'https://www.yelp.com/biz/vault-brewing-yardley?start=100', 'https://www.yelp.com/biz/vault-brewing-yardley?start=120', 'https://www.yelp.com/biz/vault-brewing-yardley?start=140', 'https://www.yelp.com/biz/vault-brewing-yardley?start=160', 'https://www.yelp.com/biz/vault-brewing-yardley?start=180']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(num_reviews)\n",
-    "url_list = []\n",
-    "for i in range(0, num_reviews,20):\n",
-    "    url_list.append(url+'?start='+str(i))\n",
-    "print(url_list[:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#part of webpage that highlights the entire review\n",
-    "reviews = text.find_all('div',attrs = {'class':\"lemon--div__373c0__1mboc review__373c0__13kpL sidebarActionsHoverTarget__373c0__2kfhE arrange__373c0__2C9bH gutter-2__373c0__1DiLQ grid__373c0__1Pz7f layout-stack-small__373c0__27wVp border-color--default__373c0__3-ifU\"})"
+    "reviews = s.find_all('div',attrs = {'class':\"lemon--div__373c0__1mboc review__373c0__13kpL sidebarActionsHoverTarget__373c0__2kfhE arrange__373c0__2C9bH gutter-2__373c0__1DiLQ grid__373c0__1Pz7f layout-stack-small__373c0__27wVp border-color--default__373c0__3-ifU\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(reviews))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -141,16 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#getting the rating and doing string manipulation to change the data type to float\n",
     "rating = float(review.select('[aria-label*=rating]')[0]['aria-label'].strip(' star rating'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -179,22 +163,24 @@
     }
    ],
    "source": [
+    "#Extracting the date the review was posted on Yelp\n",
     "date = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa-\"}).get_text()\n",
     "print(date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Extracting the text of the review\n",
     "content = review.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz comment__373c0__3EKjH text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa-\"}).text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +189,7 @@
        "\"Food is good, service subpar. We arrived and were told to wear a mask inside when going to the host stand. They weren't enforcing this, and most people weren't even wearing a mask. Whatever, but if you are going to have a rule, please enforce it. We were sat at our table, given one paper menu to share amongst the whole table of 6. Who knows if it was a new menu. It felt damp. Doesn't that defeat the purpose of a reusable menu? So everyone can have their own and toss it out after?Service was so slow, no water refills, waitress would leave before we could even ask for extra napkins and water.The duck and apple pizza was excellent. I did enjoy the pork belly fingerling fries as well. I enjoyed my blackberry drip beer, although I tasted none of the flavors noted.\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +249,10 @@
     "        dic = {}\n",
     "        #Code copied from previous steps\n",
     "        #username = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2pB8f fs-block text-color--inherit__373c0__w_15m text-align--left__373c0__2pnx_ text-weight--bold__373c0__3HYJa\"}).string\n",
-    "        location = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa- text-weight--bold__373c0__1elNz text-size--small__373c0__3NVWO\"}).get_text().strip()  \n",
+    "        try:\n",
+    "            location = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa- text-weight--bold__373c0__1elNz text-size--small__373c0__3NVWO\"}).get_text().strip()  \n",
+    "        except:\n",
+    "            location = ''\n",
     "        date = review.find('span',attrs = {'class':\"lemon--span__373c0__3997G text__373c0__2Kxyz text-color--mid__373c0__jCeOG text-align--left__373c0__2XGa-\"}).get_text()\n",
     "        rating = float(review.select('[aria-label*=rating]')[0]['aria-label'].strip(' star rating'))\n",
     "        content = review.find('p',attrs = {'class':\"lemon--p__373c0__3Qnnj text__373c0__2Kxyz comment__373c0__3EKjH text-color--normal__373c0__3xep9 text-align--left__373c0__2XGa-\"}).text\n",
@@ -288,13 +277,6 @@
     "        #log the progress\n",
     "        print('finished page '+str(index+1) + ' of '+ str(len(url_list)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
